Fixed the alignment issue with the nav bar menu items. Removed the menu activation and made it fixed.

--- a/static/css/Navbar.css
+++ b/static/css/Navbar.css
@@ -3,6 +3,7 @@
   font-weight: 400;
   font-family: "Roboto", sans-serif;
   color: rgb(27, 24, 24);
+  cursor: pointer;
 }
 
 /* For Mobile */
